--- a/build.gradle
+++ b/build.gradle
@@ -17,3 +17,15 @@ dependencies {
   testImplementation 'org.junit.jupiter:junit-jupiter-api:5.1.0'
   testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.1.0'
 }
+
+jar {
+  baseName 'accumulation'
+
+  manifest {
+    attributes 'Main-Class': 'com.merlinweber.gci.concurrent.AccumulationSolution'
+  }
+
+  from {
+    configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+  }
+}
