--- a/.gitattributes
+++ b/.gitattributes
@@ -7,4 +7,4 @@
 
 # The README should only be for the actual online repository.
 /assets export-ignore
-/readme.md export-ignore
+/README.md export-ignore
