Ignore all dev tool scripts when exporting.

--- a/.gitattributes
+++ b/.gitattributes
@@ -8,3 +8,6 @@
 # The README should only be for the actual online repository.
 /assets export-ignore
 /README.md export-ignore
+
+# Scripts that are just for development:
+/scripts/dev-tool-*.sh
