--- a/.gitattributes
+++ b/.gitattributes
@@ -10,4 +10,4 @@
 /README.md export-ignore
 
 # Scripts that are just for development:
-/scripts/dev-tool-*.sh
+/scripts/dev-tool-*.sh export-ignore
